PUSH NOTE : BN-176.md

--- a/docs/Characters/BN-176.md
+++ b/docs/Characters/BN-176.md
@@ -15,7 +15,7 @@ friends:
 enemies: []
 ---
 
-![[assets/images/bb_179.png|500]]
+![[assets/images/bb_179.png|cover hmed]]
 
 |  |  |
 | ---- | ---- |
