PUSH NOTE : 2024-02-23.md

--- a/docs/Session Notes/2024-02-23.md
+++ b/docs/Session Notes/2024-02-23.md
@@ -3,3 +3,19 @@ summary: ""
 ---
 
 Talked about character's families
+
+couple weeks since crew formed, no missions yet.
+
+[[Characters/Jedd Yulen|Jedd Yulen]] has been trying to get a job, and was reached out to by [[Characters/Ibo-one|Ibo]], who is willing to pay 1 cred for a job. One of [[Characters/Ibo-one|Ibo]]'s kids, Giro, has gone missing about a week ago. Giro has gotten involved in some bad crowds trying to earning some extra money. Giro had been hanging out at both Sloppy Jo's and Light It Up.
+
+Talking to Myrk, from the [[Factions/Dyrinek Gang|Dyrinek Gang]], [[Characters/Leto Ramus|Leto Ramus]] finds out that that Giro has been doing drug runs out of Light It Up, they don't know who for though. Also [[smoots|smoots]] are the unit of measurement in this world instead of the meter, and cereal is a relic and cheese does not exist anymore because of some old war.
+
+
+They are able to get into 
+
+
+Stellaris Sparks
+
+
+
+
