PUSH NOTE : SB-176.md

--- a/docs/Procyon/Rin/SB-176.md
+++ b/docs/Procyon/Rin/SB-176.md
@@ -1,6 +1,15 @@
 ---
+summary: A mining station above the gas giant Vet, manned mostly by [[Glossary/Urbot|Urbot]]s
 aliases: 
-tags: []
+tags:
+  - location
+share: "true"
+---
+---
+summary: "A mining station above the gas giant Vet, manned mostly by [[Glossary/Urbot|Urbot]]s"
+aliases: 
+tags:
+  - location
 share: "true"
 ---
 | **Wealth** | **Crime** | **Tech** | **Weird** |
