PUSH NOTE : 2024-02-23.md

--- a/docs/Session Notes/2024-02-23.md
+++ b/docs/Session Notes/2024-02-23.md
@@ -11,10 +11,11 @@ couple weeks since crew formed, no missions yet.
 Talking to Myrk, from the [[Factions/Dyrinek Gang|Dyrinek Gang]], [[Characters/Leto Ramus|Leto Ramus]] finds out that that Giro has been doing drug runs out of Light It Up, they don't know who for though. Also [[smoots|smoots]] are the unit of measurement in this world instead of the meter, and cereal is a relic and cheese does not exist anymore because of some old war.
 
 
-They are able to get into 
+They are able to get into light it up with [[Darcy Aldrich|Darcy]]'s help, where everyone but [[Kit Apple|Kit]] snuck downstairs to try and rescue Giro. Kit stayed upstiars to hang out with Darcy and maybe to flit with some people. 
 
+Everyone went downstairs where they heard 2 voices in a room a room ahead and[[Vapor|Vapor]] went ahead to try and act like a [[Urbot|Urbot]] reporting for duty. They 2 people decided to test Vapor, shut the door, led Vapor to another room where someone was tied up, and told Vapor to shoot them (giving vapor a gun). A fight starts as the person in the chair lunges forward and Vapor turns towards one of the pople, fires and misses. The other poeple break the door down, a fight happens, they wrestle one person to the ground.
 
-Stellaris Sparks
+Kit flirts with Stellaris Sparks, kits her number as the bar shuts down.
 
 
 
