PUSH NOTE : 2024-02-17.md

--- a/docs/Session Notes/2024-02-17.md
+++ b/docs/Session Notes/2024-02-17.md
@@ -1,5 +1,7 @@
 ---
 summary: "[[Characters/Kit Apple|Kit]] and [[Rocco|Rocco]] have a nice moment, Rocco gives a ship upgrade. [[Vapor|Vapor]] becomes best friends with [[Vorex|Vorex]]. The crew comes together."
+tags:
+  - session_note
 ---
 
 
