--- a/docs/Session Notes/2024-02-23.md
+++ b/docs/Session Notes/2024-02-23.md
@@ -1,5 +1,12 @@
 ---
-summary: ""
+summary: Group is hired by [[Ibo-one|Ibo]] to locate and rescue
+tags:
+  - session_note
+---
+---
+summary: Group is hired by [[Ibo-one|Ibo]] to locate and rescue 
+tags:
+  - session_note
 ---
 
 Talked about character's families
@@ -8,14 +15,14 @@ couple weeks since crew formed, no missions yet.
 
 [[Characters/Jedd Yulen|Jedd Yulen]] has been trying to get a job, and was reached out to by [[Characters/Ibo-one|Ibo]], who is willing to pay 1 cred for a job. One of [[Characters/Ibo-one|Ibo]]'s kids, Giro, has gone missing about a week ago. Giro has gotten involved in some bad crowds trying to earning some extra money. Giro had been hanging out at both Sloppy Jo's and Light It Up.
 
-Talking to Myrk, from the [[Factions/Dyrinek Gang|Dyrinek Gang]], [[Characters/Leto Ramus|Leto Ramus]] finds out that that Giro has been doing drug runs out of Light It Up, they don't know who for though. Also [[smoots|smoots]] are the unit of measurement in this world instead of the meter, and cereal is a relic and cheese does not exist anymore because of some old war.
+Talking to [[Myrk|Myrk]], from the [[Factions/Dyrinek Gang|Dyrinek Gang]], [[Characters/Leto Ramus|Leto Ramus]] finds out that that [[Giro|Giro]] has been doing drug runs out of Light It Up, they don't know who for though. Also [[smoots|smoots]] are the unit of measurement in this world instead of the meter, and cereal is a relic and cheese does not exist anymore because of some old war.
 
 
 They are able to get into light it up with [[Darcy Aldrich|Darcy]]'s help, where everyone but [[Kit Apple|Kit]] snuck downstairs to try and rescue Giro. Kit stayed upstiars to hang out with Darcy and maybe to flit with some people. 
 
-Everyone went downstairs where they heard 2 voices in a room a room ahead and[[Vapor|Vapor]] went ahead to try and act like a [[Urbot|Urbot]] reporting for duty. They 2 people decided to test Vapor, shut the door, led Vapor to another room where someone was tied up, and told Vapor to shoot them (giving vapor a gun). A fight starts as the person in the chair lunges forward and Vapor turns towards one of the pople, fires and misses. The other poeple break the door down, a fight happens, they wrestle one person to the ground.
+Everyone went downstairs where they heard 2 voices in a room a room ahead and[[Vapor|Vapor]] went ahead to try and act like a [[Urbot|Urbot]] reporting for duty. They 2 people decided to test Vapor, shut the door, led Vapor to another room where someone was tied up, and told Vapor to shoot them (giving vapor a gun). A fight starts as the person in the chair lunges forward, and Vapor turns towards one of the people, fires, and misses. The other poeple break the door down, a fight starts with [[Ooxoo|Ooxoo]] and [[Stacy Weathers|Stacy Weathers]], they wrestle [[Stacy Weathers|Stacy Weathers]] to the ground.
 
-Kit flirts with Stellaris Sparks, kits her number as the bar shuts down.
+Kit flirts with [[Stellaris Andrada|Stellaris Sparks]], gets her number as the bar shuts down.
 
 
 
