PUSH NOTE : 2024-03-09.md

--- a/docs/Session Notes/2024-03-09.md
+++ b/docs/Session Notes/2024-03-09.md
@@ -3,6 +3,11 @@ summary:
 tags:
   - session_note
 ---
+---
+summary:
+tags:
+    - session_note
+---
 Players finish fight with [[Ooxoo|Ooxoo]] and [[Stacy Weathers|Stacy Weathers]] with convincing them that they aren't a threat and that they don't want anyone to die. They learn that [[Ooxoo|Ooxoo]] and [[Stacy Weathers|Stacy Weathers]] work at the [[Hegemonic News Network|Hegemonic News Network]] but are secretly trying to create their own free media alternative while getting as much dirt to the HNN as possible. They exchange contact info. [[Giro|Giro]] is badly hurt from the tackle (head wound) and [[Leto Ramus|Leto Ramus]] starts treating him and then they all leave with [[Stacy Weathers|Stacy Weathers]] and [[Ooxoo|Ooxoo]] going their seperate ways.
 
 Everyone but [[Kit Apple|Kit Apple]] goes back to [[Ibo-one|Ibo-one]]'s place and they finish healing up everyone's minor wounds, Jedd has a testy interaction around Ibo's [[Urbot|Urbot]] [[BN-176|BN-176]] when Ibo mentions that BN is getting buggy because BN is close to wipe date.
