PUSH NOTE : 2024-02-17.md

--- a/docs/Session Notes/2024-02-17.md
+++ b/docs/Session Notes/2024-02-17.md
@@ -3,11 +3,16 @@ summary: "[[Characters/Kit Apple|Kit]] and [[Rocco|Rocco]] have a nice moment, R
 tags:
   - session_note
 ---
+---
+summary: "[[Characters/Kit Apple|Kit]] and [[Rocco|Rocco]] have a nice moment, Rocco gives a ship upgrade. [[Vapor|Vapor]] becomes best friends with [[Vorex|Vorex]]. The crew comes together."
+tags:
+    - session_note
+---
 
 
 
 - Favored contact - [[Characters/Ibo-one|Ibo]]
-	-  Gives +1 status to [[Factions/Dyrinek Gang|Dyrinek Gang]] 
+	-  Gives +1 status to [[Factions/Dyrinek Gang|Dyrinek Gang]]
 	- -1 status to [[Factions/Hegemonic News Network|HNN]]
 
 
@@ -16,7 +21,7 @@ tags:
 	- meanwhile [[Characters/Flora|Flora]] sees their friend [[Factions/Vorex|Vorex]] that they have had some encoutners with in the past and have a nice conversation with while eavesdropping on Kit and Rocco.
 
 
-- [[Characters/Vapor|Vapor]] was an [[Urbot|Urbot]] for the [[Factions/Ashen Knives|Ashen Knives]] until they escaped 1.5 years before session. 
+- [[Characters/Vapor|Vapor]] was an [[Urbot|Urbot]] for the [[Factions/Ashen Knives|Ashen Knives]] until they escaped 1.5 years before session.
 - [[Vapor|Vapor]] starts having some glitches so they need help from a techno expert, Jedd contacts his friend Kit, which then through Flora, they get [[Factions/Vorex|Vorex]] to come and help.
 	- Vorex comes by for dinner and brings her Ur export [[Characters/Leto Ramus|Leto Ramus]] to help, fixes Vapor. Vapor and Vorex becomes friends. Vorex helps Vapor get some Poker playing software upgrades (Which is how Vapor gets the gambling vice).
 
