PUSH NOTE : BN-176.md

--- a/docs/Characters/BN-176.md
+++ b/docs/Characters/BN-176.md
@@ -14,6 +14,22 @@ friends:
   - "[[Characters/Ibo-one|Ibo]]"
 enemies: []
 ---
+---
+name: BN-176
+faction: ""
+pronouns: He/him
+location: "[[Procyon/Rin/Warren|Warren]]"
+role: npc
+status: active
+share: "true"
+tags:
+    - npc
+aliases: []
+profile: "[[Characters/Ibo-one|Ibo]]'s personal [[Glossary/Urbot|Glossary/Urbot]]. Trained in various household tasks like cleaning, maintenance, and electronics"
+friends:
+    - "[[Characters/Ibo-one|Ibo]]"
+enemies: []
+---
 
 ![[assets/images/bb_179.png|cover hmed]]
 
@@ -31,5 +47,4 @@ enemies: []
 [[Characters/Ibo-one.md|Ibo]]
 
 ## Enemies
-
 
