PUSH NOTE : 2024-03-09.md

--- a/docs/Session Notes/2024-03-09.md
+++ b/docs/Session Notes/2024-03-09.md
@@ -1,10 +1,10 @@
 ---
-summary: 
+summary: Finish mission, make allies with [[Ooxoo|Ooxoo]] and [[Stacy Weathers|Stacy Weathers]], [[Kit Apple|Kit]] goes out with [[Stellaris Andrada|Stellaris Sparks]] and learns about [[Lonalowda|Lonalowda]]. Downtime activities
 tags:
   - session_note
 ---
 ---
-summary:
+summary: Finish mission, make allies with [[Ooxoo|Ooxoo]] and [[Stacy Weathers|Stacy Weathers]], [[Kit Apple|Kit]] goes out with [[Stellaris Andrada|Stellaris Sparks]] and learns about [[Lonalowda|Lonalowda]]. Downtime activities
 tags:
     - session_note
 ---
