PUSH NOTE : The Wire 2024-03-16.md

--- a/docs/The Wire/The Wire 2024-03-16.md
+++ b/docs/The Wire/The Wire 2024-03-16.md
@@ -19,7 +19,8 @@ tags:
 
 ## News Off the Wire
 
-- - [[Borniko Syndicate|Borniko Syndicate]] is trying to fence something very valuable
-- Unknown group will pay big money with any information on the Invictus (old Ur ship)
+- [[The Wire/The Wire 2024-03-16.md|The Wire 2024-03-16]]: 
+    - [[Borniko Syndicate|Borniko Syndicate]] is trying to fence something very valuable
+    - Unknown group will pay big money with any information on the Invictus (old Ur ship)
 
 
